--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-server.port=8087
+server.port=8081
 #logging.level.org.springframework=DEBUG
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
